--- a/index.html
+++ b/index.html
@@ -96,34 +96,34 @@
 </head>
 <body>
   <header>
-    <h1>👋 Hi, I'm <strong>Vidhi Dagar</strong></h1>
+    <h1> Hi, I'm <strong>Vidhi Dagar</strong></h1>
     <p>Data Analyst | Problem Solver | Insight Creator</p>
   </header>
 
   <section id="about">
-    <h2>🌸 About Me</h2>
+    <h2> About Me</h2>
     <p>I’m an Information Technology undergraduate at <strong>Indira Gandhi Delhi Technical University for Women</strong>, passionate about exploring, visualizing, and communicating data insights. My goal is to make complex datasets meaningful and actionable. Outside analytics, I enjoy skating, exploring new tools, and reading about emerging tech trends.</p>
   </section>
 
   <section id="projects">
-    <h2>🚀 Projects</h2>
+    <h2> Projects</h2>
 
     <div class="project">
-      <h3>🧠 Mushroom Classification</h3>
+      <h3> Mushroom Classification</h3>
       <p>Performed exploratory data analysis on the Kaggle Mushroom dataset to determine key attributes influencing edibility. Cleaned, preprocessed, and visualized data to draw actionable insights.</p>
       <p><strong>Tech Stack:</strong> Python, Pandas, Matplotlib, Seaborn</p>
       <a href="https://github.com/vidhidagar25/ML_Project" target="_blank">View Project →</a>
     </div>
 
     <div class="project">
-      <h3>💼 Business Analysis</h3>
+      <h3> Business Analysis</h3>
       <p>Built a linear regression model to analyze factors influencing employee compensation, identifying patterns based on role, experience, and education through data visualization and statistical techniques.</p>
       <p><strong>Tech Stack:</strong> Python, Excel, Regression Models</p>
       <a href="https://github.com/vidhidagar25/MS-Excel-Project" target="_blank">View Project →</a>
     </div>
 
     <div class="project">
-      <h3>📊 Blinkit Sales Dashboard</h3>
+      <h3> Blinkit Sales Dashboard</h3>
       <p>Created a Power BI dashboard to evaluate Blinkit’s sales trends, stock distribution, and customer satisfaction through KPIs and data visualizations.</p>
       <p><strong>Tech Stack:</strong> Power BI, DAX, Data Cleaning</p>
       <a href="https://github.com/vidhidagar25/Blinkit_data_analysis" target="_blank">View Project →</a>
@@ -131,7 +131,7 @@
   </section>
 
   <section id="skills">
-    <h2>🧰 Skills</h2>
+    <h2> Skills</h2>
     <div class="skills">
       <div class="skill-item">Python</div>
       <div class="skill-item">C++</div>
@@ -155,7 +155,7 @@
   </section>
 
   <section id="contact">
-    <h2>📬 Let’s Connect</h2>
+    <h2> Let’s Connect</h2>
     <p>Email: <a href="mailto:vidhidagar123@gmail.com">vidhidagar123@gmail.com</a></p>
     <p>GitHub: <a href="https://github.com/vidhidagar25" target="_blank">github.com/vidhidagar25</a></p>
     <p>GeeksforGeeks: <a href="https://www.geeksforgeeks.org/user/vidhidagar25/" target="_blank">Profile</a></p>
