--- a/index.html
+++ b/index.html
@@ -1,169 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Vidhi Dagar | Data Analyst Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      background-color: #fdfdfd;
-      color: #333;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
+    :root{
+      --bg-1: #faf8ff;
+      --bg-2: #f3f7ff;
+      --accent: #eecff6;
+      --accent-2: #cfeef5;
+      --accent-3: #f6e8ff;
+      --muted: #666;
+      --text: #222;
     }
 
-    header {
-      background: linear-gradient(135deg, #f6d5f7, #fbe9d7);
-      color: #333;
-      text-align: center;
-      padding: 80px 20px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    *{box-sizing:border-box}
+    body{
+      margin:0; font-family:'Poppins',sans-serif; color:var(--text);
+      background: linear-gradient(180deg,var(--bg-1) 0%, var(--bg-2) 100%);
+      overflow-x:hidden;
     }
 
-    header h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
+    header{
+      background: linear-gradient(135deg, #fde7f5 0%, #fcebf1 100%);
+      text-align:center; padding:96px 20px 64px;
+      border-bottom-left-radius:28px; border-bottom-right-radius:28px;
     }
+    header h1{font-size:2.8rem;margin:0;color:var(--text)}
+    header p{margin:10px 0 0;color:var(--muted);font-size:1.05rem}
 
-    header p {
-      font-size: 1.2rem;
-      color: #555;
-    }
+    main{max-width:980px;margin:36px auto;padding:0 20px}
+    section{margin:48px 0;animation:fadeUp .9s ease both}
+    @keyframes fadeUp{from{opacity:0;transform:translateY(18px)}to{opacity:1;transform:translateY(0)}}
 
-    section {
-      max-width: 900px;
-      margin: 60px auto;
-      padding: 0 20px;
-    }
+    h2{font-size:1.2rem;margin:0 0 18px;color:#444;border-bottom:2px solid rgba(200,180,250,.6);display:inline-block;padding-bottom:6px}
 
-    h2 {
-      color: #444;
-      border-bottom: 2px solid #e0c3fc;
-      display: inline-block;
-      margin-bottom: 20px;
-    }
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:18px}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,0.9), rgba(255,255,255,0.95));padding:22px;border-radius:14px;box-shadow:0 10px 24px rgba(120,100,160,0.06);border-top:6px solid rgba(200,170,250,0.9);transition:transform .32s,box-shadow .32s}
+    .card:hover{transform:translateY(-8px);box-shadow:0 18px 40px rgba(130,100,200,0.12);border-top-color:rgba(160,140,250,1)}
+    .card h3{margin:0 0 8px;font-size:1.05rem}
+    .card p{margin:0 0 12px;color:var(--muted);font-size:.95rem}
+    .chip{display:inline-block;padding:8px 12px;border-radius:999px;background:linear-gradient(90deg,var(--accent-3),#f7fbff);font-size:.85rem;color:#4a3b5a;margin-right:8px}
+    a.link{color:#6b4ee1;text-decoration:none;font-weight:600}
 
-    .project {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
-      margin-bottom: 25px;
-      transition: transform 0.2s;
-    }
+    .skills{display:flex;flex-wrap:wrap;gap:10px;align-items:center}
+    .skill{background:linear-gradient(135deg,#f6f0ff,#fbfbff);padding:10px 14px;border-radius:20px;box-shadow:0 6px 14px rgba(100,80,160,0.04);transition:transform .18s}
+    .skill:hover{transform:scale(1.06)}
 
-    .project:hover {
-      transform: translateY(-5px);
-    }
+    .title-with-icon{display:flex;align-items:center;gap:10px}
+    .title-with-icon svg{width:36px;height:36px;opacity:.95}
 
-    .project h3 {
-      margin-top: 0;
-      color: #444;
-    }
-
-    .skills, .contact {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .skill-item {
-      background: #f3e8ff;
-      padding: 8px 14px;
-      border-radius: 20px;
-      font-size: 0.9rem;
-    }
-
-    footer {
-      background: #faf0ff;
-      text-align: center;
-      padding: 20px;
-      font-size: 0.9rem;
-      color: #666;
-    }
-
-    a {
-      color: #7a5af8;
-      text-decoration: none;
-    }
-
-    a:hover {
-      text-decoration: underline;
-    }
+    footer{margin:72px 0 24px;padding:18px;text-align:center;color:var(--muted);background:linear-gradient(180deg,#fff 0%, #fbfcff 100%);border-radius:12px}
   </style>
 </head>
 <body>
   <header>
-    <h1> Hi, I'm <strong>Vidhi Dagar</strong></h1>
-    <p>Data Analyst | Problem Solver | Insight Creator</p>
+    <h1>Hi, I'm <strong>Vidhi Dagar</strong></h1>
+    <p>Data Analyst | Insight Creator | Visual Thinker</p>
   </header>
 
-  <section id="about">
-    <h2> About Me</h2>
-    <p>I’m an Information Technology undergraduate at <strong>Indira Gandhi Delhi Technical University for Women</strong>, passionate about exploring, visualizing, and communicating data insights. My goal is to make complex datasets meaningful and actionable. Outside analytics, I enjoy skating, exploring new tools, and reading about emerging tech trends.</p>
-  </section>
+  <main>
+    <section id="about">
+      <div class="title-with-icon"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="3" y="3" width="18" height="18" rx="4" stroke="#d9c3f6" stroke-width="1.2" fill="#fff"/><path d="M7 14h3v-4H7v4zM11 9h3v9h-3V9zM15 12h3v6h-3v-6z" fill="#a78edf" opacity=".9"/></svg><h2>🌸 About Me</h2></div>
+      <p style="color:var(--muted);margin-top:12px">I’m an Information Technology undergraduate at <strong>Indira Gandhi Delhi Technical University for Women</strong>, passionate about exploring, visualizing, and communicating data insights. I love uncovering hidden stories within data and designing visuals that speak clearly. Outside analytics, I enjoy skating, discovering creative tools, and reading about emerging tech trends.</p>
+    </section>
 
-  <section id="projects">
-    <h2> Projects</h2>
+    <section id="projects">
+      <div class="title-with-icon"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="9" stroke="#d8c9fa" stroke-width="1.2" fill="#fff"/><path d="M8 13h8" stroke="#b89ef7" stroke-width="1.4" stroke-linecap="round"/></svg><h2>🚀 Projects</h2></div>
+      <div class="grid" style="margin-top:18px">
+        <article class="card">
+          <h3>🧠 Mushroom Classification <span class="chip">Python</span></h3>
+          <p>Performed exploratory data analysis on the Kaggle Mushroom dataset to determine key attributes influencing edibility. Cleaned, preprocessed, and visualized data to draw actionable insights.</p>
+          <p style="margin:0"><a class="link" href="https://github.com/vidhidagar25/ML_Project" target="_blank" rel="noopener">View Project →</a></p>
+        </article>
 
-    <div class="project">
-      <h3> Mushroom Classification</h3>
-      <p>Performed exploratory data analysis on the Kaggle Mushroom dataset to determine key attributes influencing edibility. Cleaned, preprocessed, and visualized data to draw actionable insights.</p>
-      <p><strong>Tech Stack:</strong> Python, Pandas, Matplotlib, Seaborn</p>
-      <a href="https://github.com/vidhidagar25/ML_Project" target="_blank">View Project →</a>
-    </div>
+        <article class="card">
+          <h3>💼 Business Analysis <span class="chip">Excel</span></h3>
+          <p>Built a regression model to analyze factors influencing employee compensation, identifying patterns based on role, experience, and education through data visualization and statistical techniques.</p>
+          <p style="margin:0"><a class="link" href="https://github.com/vidhidagar25/MS-Excel-Project" target="_blank" rel="noopener">View Project →</a></p>
+        </article>
 
-    <div class="project">
-      <h3> Business Analysis</h3>
-      <p>Built a linear regression model to analyze factors influencing employee compensation, identifying patterns based on role, experience, and education through data visualization and statistical techniques.</p>
-      <p><strong>Tech Stack:</strong> Python, Excel, Regression Models</p>
-      <a href="https://github.com/vidhidagar25/MS-Excel-Project" target="_blank">View Project →</a>
-    </div>
+        <article class="card">
+          <h3>📊 Blinkit Sales Dashboard <span class="chip">Power BI</span></h3>
+          <p>Created a Power BI dashboard to evaluate Blinkit’s sales trends, stock distribution, and customer satisfaction through KPIs and data visualizations.</p>
+          <p style="margin:0"><a class="link" href="https://github.com/vidhidagar25/Blinkit_data_analysis" target="_blank" rel="noopener">View Project →</a></p>
+        </article>
+      </div>
+    </section>
 
-    <div class="project">
-      <h3> Blinkit Sales Dashboard</h3>
-      <p>Created a Power BI dashboard to evaluate Blinkit’s sales trends, stock distribution, and customer satisfaction through KPIs and data visualizations.</p>
-      <p><strong>Tech Stack:</strong> Power BI, DAX, Data Cleaning</p>
-      <a href="https://github.com/vidhidagar25/Blinkit_data_analysis" target="_blank">View Project →</a>
-    </div>
-  </section>
+    <section id="skills">
+      <div class="title-with-icon"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="2" y="3" width="20" height="18" rx="4" stroke="#d8e9f8" stroke-width="1.2" fill="#fff"/><path d="M6 12h12" stroke="#7eb6e9" stroke-width="1.2" stroke-linecap="round"/></svg><h2>🧰 Skills</h2></div>
+      <div class="skills" style="margin-top:16px">
+        <div class="skill">Python</div>
+        <div class="skill">C++</div>
+        <div class="skill">SQL</div>
+        <div class="skill">HTML</div>
+        <div class="skill">Power BI</div>
+        <div class="skill">Excel</div>
+        <div class="skill">Pandas</div>
+        <div class="skill">Matplotlib</div>
+        <div class="skill">Seaborn</div>
+      </div>
+    </section>
 
-  <section id="skills">
-    <h2> Skills</h2>
-    <div class="skills">
-      <div class="skill-item">Python</div>
-      <div class="skill-item">C++</div>
-      <div class="skill-item">SQL</div>
-      <div class="skill-item">HTML</div>
-      <div class="skill-item">Power BI</div>
-      <div class="skill-item">Excel</div>
-      <div class="skill-item">Pandas</div>
-      <div class="skill-item">Matplotlib</div>
-      <div class="skill-item">Seaborn</div>
-    </div>
-  </section>
+    <section id="highlights">
+      <div class="title-with-icon"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2l2.9 6.1L21 9l-5 3.7L17 21l-5-3.2L7 21l1-8.3L3 9l6.1-.9L12 2z" fill="#f0dbff"/></svg><h2>🌟 Highlights</h2></div>
+      <ul style="color:var(--muted);margin-top:12px">
+        <li><strong>Rotaract Club of IGDTUW:</strong> Organized social impact events and community drives.</li>
+        <li><strong>Desh Ke Mentor:</strong> Mentored underprivileged students in career guidance.</li>
+        <li><strong>National-Level Skater & Medalist:</strong> Balancing precision and performance both on track and in analytics.</li>
+      </ul>
+    </section>
 
-  <section id="achievements">
-    <h2>🌟 Highlights</h2>
-    <ul>
-      <li><strong>Rotaract Club of IGDTUW:</strong> Organized social impact events and community drives.</li>
-      <li><strong>Desh Ke Mentor:</strong> Mentored underprivileged students in career guidance.</li>
-      <li><strong>National-Level Skater & Medalist:</strong> Balancing precision and performance both on track and in analytics.</li>
-    </ul>
-  </section>
+    <section id="contact">
+      <div class="title-with-icon"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="3" y="4" width="18" height="14" rx="3" fill="#fff" stroke="#e6e1ff" stroke-width="1.2"/><path d="M4 7h16" stroke="#d0c3f9" stroke-width="1.2"/></svg><h2>📬 Let’s Connect</h2></div>
+      <p style="color:var(--muted);margin-top:12px">Email: <a href="mailto:vidhidagar123@gmail.com">vidhidagar123@gmail.com</a></p>
+      <p style="color:var(--muted)">GitHub: <a href="https://github.com/vidhidagar25" target="_blank" rel="noopener">github.com/vidhidagar25</a></p>
+      <p style="color:var(--muted)">GeeksforGeeks: <a href="https://www.geeksforgeeks.org/user/vidhidagar25/" target="_blank" rel="noopener">Profile</a></p>
+      <p style="color:var(--muted)">Hackerrank: <a href="https://www.hackerrank.com/profile/vidhidagar123" target="_blank" rel="noopener">Profile</a></p>
+    </section>
 
-  <section id="contact">
-    <h2> Let’s Connect</h2>
-    <p>Email: <a href="mailto:vidhidagar123@gmail.com">vidhidagar123@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/vidhidagar25" target="_blank">github.com/vidhidagar25</a></p>
-    <p>GeeksforGeeks: <a href="https://www.geeksforgeeks.org/user/vidhidagar25/" target="_blank">Profile</a></p>
-    <p>Hackerrank: <a href="https://www.hackerrank.com/profile/vidhidagar123" target="_blank">Profile</a></p>
-  </section>
-
-  <footer>
-    <p>© 2025 Vidhi Dagar | Designed with 💜 and data</p>
-  </footer>
+    <footer>© 2025 Vidhi Dagar | Designed with 💜 curiosity and pastel dreams</footer>
+  </main>
 </body>
 </html>
