--- a/index.html
+++ b/index.html
@@ -71,19 +71,19 @@
       <div class="title-with-icon"><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="9" stroke="#d8c9fa" stroke-width="1.2" fill="#fff"/><path d="M8 13h8" stroke="#b89ef7" stroke-width="1.4" stroke-linecap="round"/></svg><h2>🚀 Projects</h2></div>
       <div class="grid" style="margin-top:18px">
         <article class="card">
-          <h3>🧠 Mushroom Classification <span class="chip">Python</span></h3>
+          <h3> Mushroom Classification <span class="chip">Python</span></h3>
           <p>Performed exploratory data analysis on the Kaggle Mushroom dataset to determine key attributes influencing edibility. Cleaned, preprocessed, and visualized data to draw actionable insights.</p>
           <p style="margin:0"><a class="link" href="https://github.com/vidhidagar25/ML_Project" target="_blank" rel="noopener">View Project →</a></p>
         </article>
 
         <article class="card">
-          <h3>💼 Business Analysis <span class="chip">Excel</span></h3>
+          <h3> Business Analysis <span class="chip">Excel</span></h3>
           <p>Built a regression model to analyze factors influencing employee compensation, identifying patterns based on role, experience, and education through data visualization and statistical techniques.</p>
           <p style="margin:0"><a class="link" href="https://github.com/vidhidagar25/MS-Excel-Project" target="_blank" rel="noopener">View Project →</a></p>
         </article>
 
         <article class="card">
-          <h3>📊 Blinkit Sales Dashboard <span class="chip">Power BI</span></h3>
+          <h3> Blinkit Sales Dashboard <span class="chip">Power BI</span></h3>
           <p>Created a Power BI dashboard to evaluate Blinkit’s sales trends, stock distribution, and customer satisfaction through KPIs and data visualizations.</p>
           <p style="margin:0"><a class="link" href="https://github.com/vidhidagar25/Blinkit_data_analysis" target="_blank" rel="noopener">View Project →</a></p>
         </article>
